--- a/index-inject.html
+++ b/index-inject.html
@@ -17,9 +17,13 @@
         <script src="/bower_components/angular-material/angular-material.js"></script>
     <!-- /process -->
     <!-- process:template
-         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
          <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js"></script>
+         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-area.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.7/angular-material.min.js"></script>
+         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resource.min.js"></script>
          <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.7/angular-material.min.css">
     /process -->
 
     <!-- build:vendorCSS css/vendor.css -->
